Partially fixed background scaling issues on small screens.

--- a/css/style.scss
+++ b/css/style.scss
@@ -56,7 +56,7 @@ section {
   justify-content: center;
 
   background: $color-primary;
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: center;
